Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/category-page.mdx
+++ b/app-builder/builder/pages/category-page.mdx
@@ -3,247 +3,236 @@ title: "Categories"
 description: "Description of your new file."
 icon: "circle-user"
 ---
-### **3.3.2.  Categories** 
+
+### **3.3.2.  Categories**
 
 **Bố cục**  
-Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Bố cục mặc định, Bố cục dọc, Bố cục ngang, Trượt ngang, Tab danh mục, Danh sách sản phẩm, hoặc Nhóm danh mục.  
+Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Bố cục mặc định, Bố cục dọc, Bố cục ngang, Trượt ngang, Tab danh mục, Danh sách sản phẩm, hoặc Nhóm danh mục.
+
 <Frame caption="Bố cục danh mục">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image138_a4d6946512.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
-
-
-
-	
 
 **Dữ liệu**
 
 **Thêm dữ liệu mới**
 
-* **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+- **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
 
 <Frame caption="Nút thêm dữ liệu">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image58_0b45699748.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
- 
-  * **Bước 2:**  
-    * Người dùng nhập tên danh mục  
-    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho danh mục và banner danh mục  
-    * Chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục)  
-      * Hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
+
+- **Bước 2:**
+  - Người dùng nhập tên danh mục
+  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho danh mục và banner danh mục
+  - Chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục)
+    - Hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
 
 <Frame caption="Thêm dữ liệu cho danh mục ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image193_6ad7dde887.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
- 
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho danh mục và thêm ảnh cho banner danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+
+- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho danh mục và thêm ảnh cho banner danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+
+**Chỉnh sửa:**
+- **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image122_2ef90432aa.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
-  * **Bước 2:** Người dùng nhập tên danh mục, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục) hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
+- **Bước 2:** Người dùng nhập tên danh mục, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục) hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
 
 <Frame caption="Trang chỉnh sửa dữ liệu  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image120_1cf0daec72.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho thẻ trong danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho thẻ trong danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+
+**Xóa:**
+- **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
 <Frame caption="Nút xóa ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image224_cc8180dc56.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
- 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa thẻ khỏi danh mục hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+
+- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa thẻ khỏi danh mục hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
 **Tiêu đề**
 
-	**Nền**
+**Nền**
+- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
-* Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
-  * Xóa màu nền bằng cách nhấn nút ![][image69]
-
-* **Hiển thị tiêu đề:**  
-  * Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "Danh mục" thì phần tử danh mục sẽ như thế này
+**Hiển thị tiêu đề:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "Danh mục" thì phần tử danh mục sẽ như thế này
 
 <Frame caption="Tiêu đề danh mục  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image136_9047a19af9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
- 
-* **Cỡ chữ:**  
-  * Người dùng có thể điều chỉnh cỡ chữ cho tiêu đề của danh mục tại ![][image100]  
-* **Màu chữ:**  
-  * Người dùng có thể thay đổi màu chữ cho tiêu đề của danh mục tại ![][image101]  
-* **Hiển thị icon:**  
-  * Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon và không có hiển thị icon
+
+**Cỡ chữ:**
+- Người dùng có thể điều chỉnh cỡ chữ cho tiêu đề của danh mục tại ![][image100]
+
+**Màu chữ:**
+- Người dùng có thể thay đổi màu chữ cho tiêu đề của danh mục tại ![][image101]
+
+**Hiển thị icon:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon và không có hiển thị icon
 
 **Dan mục chính**
 
-	**Nền**
-
-* Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
-  * Xóa màu nền bằng cách nhấn nút 
+**Nền**
+- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Hiển thị icon/ hình ảnh**
-
-* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon/ hình ảnh và không có hiển thị icon/ hình ảnh
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon/ hình ảnh và không có hiển thị icon/ hình ảnh
 
 **Hiển thị tên danh mục**
-
-* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên danh mục và không có hiển thị tên danh mục
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên danh mục và không có hiển thị tên danh mục
 
 **Kích thước/ Màu sắc**
-
-* Người dùng có thể nhập hoặc tăng/giảm kích thước danh mục![][image103]và thay đổi màu sắc danh mục ![][image104]  
-  * 
+- Người dùng có thể nhập hoặc tăng/giảm kích thước danh mục ![][image103] và thay đổi màu sắc danh mục ![][image104]
 
 **Hiển thị danh mục phụ**
-
-* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị danh mục phụ và không có hiển thị danh mục phụ.  
-  * 
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị danh mục phụ và không có hiển thị danh mục phụ.
 
 **Danh mục phụ**
 
-	**Hiển thị tên**
-
-* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên danh mục phụ và không có hiển thị tên danh mục phụ.
+**Hiển thị tên**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên danh mục phụ và không có hiển thị tên danh mục phụ.
 
 **Hiển thị hình ảnh**
-
-* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị hình ảnh danh mục phụ và không có hiển thị hình ảnh danh mục phụ.
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị hình ảnh danh mục phụ và không có hiển thị hình ảnh danh mục phụ.
 
 **Banner**
 
-	**Hiển thị banner**
+**Hiển thị banner**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị banner và không có hiển thị banner.
 
-* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị banner và không có hiển thị banner.
-
-	**Chiều cao**
-
+**Chiều cao**  
 Người dùng có thể chọn hoặc tăng/giảm chiều cao của banner tại ![][image105]
 
-* **Lề ngoài**  
-  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]  
-* **Lề trong**  
-  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]  
-* **Bo góc**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]  
-* **Viền**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]  
-  * Chọn màu cho viền bằng cách nhấn ô vuông ![][image73]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image74]  
-  * Xóa viền bằng cách nhấn nút ![][image75]  
-* **Đổ bóng**  
-  * Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]  
-  * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image78]  
-  * Xóa đồ bóng bằng cách nhấn nút ![][image79]
+**Lề ngoài**
+- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
+
+**Lề trong**
+- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
+
+**Bo góc**
+- Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
+
+**Viền**
+- Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]
+- Chọn màu cho viền bằng cách nhấn ô vuông ![][image73] sau đó chọn màu
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+**Đổ bóng**
+- Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77] sau đó chọn màu
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Thẻ sản phẩm**
 
-* **Lề ngoài**  
-  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
+**Lề ngoài**
+- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
 
-	**Kích thước**
+**Lề trong**
+- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
 
+**Kích thước**  
 Người dùng có thể điều chỉnh kích thước cho tiêu đề của thẻ sản phẩm tại ![][image106]
 
-	**Kiểu hình ảnh** 
-
+**Kiểu hình ảnh**  
 Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
 
-	**Nền**
+**Nền**
+- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70] hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image73] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
-* Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
-  * Xóa màu nền bằng cách nhấn nút   
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70]hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image73]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image74]  
-    * Xóa viền bằng cách nhấn nút ![][image75]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image78]  
-    * Xóa đồ bóng bằng cách nhấn nút ![][image79]
+**Hiển thị tên sản phẩm:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm
+  - **Hiển thị danh mục:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
+  - **Hiển thị giá tiền:**
+    - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]
+  - **Hiển thị giá giảm:**
+    - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc ![][image111]
+  - **Sản phẩm Sale:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
+  - **Hiển thị nhãn:**
+    - Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
+  - **Hiển thị yêu thích:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích
+  - **Hiển thị đánh giá**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá
+  - **Hiển thị số lượng yêu thích**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+  - **Hiển thị số lượng đã bán:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán
+  - **Hiển thị giỏ hàng:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
 
-	**Hiển thị tên sản phẩm**:
-
-* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm  
-  * **Hiển thị danh mục:**  
-    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục  
-  * **Hiển thị giá tiền:**  
-    * Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]  
-  * **Hiển thị giá giảm:**  
-    * Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc![][image111]  
-  * **Sản phẩm Sale:**  
-    * Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale  
-  * **Hiển thị nhãn:**  
-    * Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.  
-  * **Hiển thị yêu thích:**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích  
-  * **Hiển thị đánh giá**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá  
-  * **Hiển thị số lượng yêu thích**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích  
-  * **Hiển thị số lượng đã bán:**  
-    * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán  
-  * **Hiển thị giỏ hàng:**  
-    * Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
-
-	**Kiểu nút giỏ hàng:** 
-
+**Kiểu nút giỏ hàng:**  
 Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
 
-**Kiểu thẻ sản phẩm:** 
-
+**Kiểu thẻ sản phẩm:**  
 Người dùng có thể chọn chuyển đổi hiển thị sản phẩm giữa ngang hoặc dọc ![][image119]
