--- a/app-builder/builder/pages/home.mdx
+++ b/app-builder/builder/pages/home.mdx
@@ -6,7 +6,7 @@ icon: "circle-user"
 
 ### **3.3.1. Home**
 
-**Các mẫu Header**\
+**Các mẫu Header**  
 Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header phù hợp
 
 <Frame caption="Nút xem thêm">
@@ -21,35 +21,34 @@ Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header p
 **Khoảng cách**
 
 - **Lề ngoài**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới bằng nút ![][image59]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa bằng nút ![][image61]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới bằng nút ![][image59] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa bằng nút ![][image61] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
 - **Lề trong**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới bằng nút ![][image63]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải bằng nút ![][image65]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới bằng nút ![][image63] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải bằng nút ![][image65] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
 
-    **Phong cách**
+**Phong cách**
 - **Nền**
-  - Chọn màu nền cho header bằng cách nhấn ô vuông ![][image67]sau đó chọn màu
+  - Chọn màu nền cho header bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
   - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]
   - Xóa màu nền bằng cách nhấn nút ![][image69]
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập ![][image70]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập ![][image70] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
 - **Viền**
   - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập ![][image72]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image73]sau đó chọn màu
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image73] sau đó chọn màu
   - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image74]
   - Xóa viền bằng cách nhấn nút ![][image75]
 - **Đổ bóng**
   - Người dùng có thể chọn độ lớn đổ bóng của header tại ô ![][image76]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77]sau đó chọn màu
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77] sau đó chọn màu
   - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image78]
   - Xóa đồ bóng bằng cách nhấn nút ![][image79]
 
 **Tổng quan**
 
 **Hiển thị tiêu đề:**
-
-- Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho header. Ví dụ, nếu tiêu đề là "Xin chào" thì sẽ như thế này
+- Người dùng nhấn nút ![][image80] để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho header. Ví dụ, nếu tiêu đề là "Xin chào" thì sẽ như thế này
 
 <Frame caption="Tiêu đề header">
   <img
@@ -64,8 +63,7 @@ Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header p
   - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của header tại ![][image82]
 
 **Hiển thị phụ đề:**
-
-- Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho header. Ví dụ, nếu tiêu đề là "Ngày mới tốt lành 👋" thì sẽ như thế này
+- Người dùng nhấn nút ![][image80] để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho header. Ví dụ, nếu tiêu đề là "Ngày mới tốt lành 👋" thì sẽ như thế này
 
 <Frame caption="Phụ đề header">
   <img
@@ -79,27 +77,22 @@ Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header p
 - **Kích thước/ Màu sắc:**
   - Người dùng có thể điều chỉnh kích thước và màu sắc cho phụ đề của header tại ![][image82]
 
+**Hiển thị logo:**
+- Người dùng nhấn nút ![][image84] để chuyển đổi qua lại giữa 2 trạng thái có logo và không có logo
 
-- **Hiển thị logo: **
+**Hiển thị icon giỏ hàng:**  
+Người dùng nhấn nút ![][image85] để chuyển đổi qua lại giữa 2 trạng thái có icon giỏ hàng và không có icon giỏ hàng
 
-      Người dùng nhấn nút ![][image84]để chuyển đổi qua lại giữa 2 trạng thái có logo và không có logo
+**Hiển thị icon tin nhắn:**  
+Người dùng nhấn nút ![][image86] để chuyển đổi qua lại giữa 2 trạng thái có icon tin nhắn và không có icon tin nhắn
 
-- **Hiển thị icon giỏ hàng:**\
-  Người dùng nhấn nút ![][image85]để chuyển đổi qua lại giữa 2 trạng thái có icon giỏ hàng và không có icon giỏ hàng
-- **Hiển thị icon tin nhắn:**
+**Hiển thị icon tìm kiếm:**  
+Người dùng nhấn nút ![][image87] để chuyển đổi qua lại giữa 2 trạng thái có icon tìm kiếm và không có icon tìm kiếm
 
-Người dùng nhấn nút ![][image86]để chuyển đổi qua lại giữa 2 trạng thái có icon tin nhắn và không có icon tin nhắn
-
-- **Hiển thị icon tìm kiếm:**
-
-Người dùng nhấn nút ![][image87]để chuyển đổi qua lại giữa 2 trạng thái có icon tìm kiếm và không có icon tìm kiếm
-
-- **Hiển thị icon thông báo:**
-
-Người dùng nhấn nút ![][image88]để chuyển đổi qua lại giữa 2 trạng thái có icon thông báo và không có icon thông báo
+**Hiển thị icon thông báo:**  
+Người dùng nhấn nút ![][image88] để chuyển đổi qua lại giữa 2 trạng thái có icon thông báo và không có icon thông báo
 
 **Trang tìm kiếm:**
-
 Người dùng thể chọn phạm vi tìm kiếm như **Sản phẩm** hoặc **Dịch vụ** trong phần tùy chọn.
 
 <Frame caption="Điều chỉnh tùy chọn trang tìm kiếm">
@@ -114,8 +107,7 @@ Người dùng thể chọn phạm vi tìm kiếm như **Sản phẩm** hoặc *
 **Thanh tìm kiếm**
 
 **Hiển thị thanh tìm kiếm:**
-
-- Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có thanh tìm kiếm và không có thanh tìm kiếm, ngoài ra người dùng có thể nhập nội dung tùy chỉnh. Ví dụ, nếu nội dung trùy chỉnh là "Bạn đang cần gì?" thì sẽ như thế này
+- Người dùng nhấn nút ![][image80] để chuyển đổi qua lại giữa 2 trạng thái có thanh tìm kiếm và không có thanh tìm kiếm, ngoài ra người dùng có thể nhập nội dung tùy chỉnh. Ví dụ, nếu nội dung trùy chỉnh là "Bạn đang cần gì?" thì sẽ như thế này
 
 <Frame caption="Thanh tìm kiếm">
   <img
